--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,11 +10,14 @@ variables:
   GCP_PROJECT_ID: "theta-moment-469209-j0"
   GKE_CLUSTER_NAME: "autopilot-cluster-1"
   GKE_CLUSTER_ZONE: "asia-southeast1"
+  # DOK Configuration
+  DO_CLUSTER_NAME: "kube-node-1"
   # Email API Key
   EMAIL_FROMEMAIL: "sendgrid@bunlong.site"
 
 stages:
   - build
+  - infrastructure
   - deploy
 
 # Build and Push Docker Image
@@ -35,35 +38,6 @@ build:
   script:
     # Update appsettings.json with production connection string
     - sed -i "s|Server=<server>|Server=$SQLSERVER_IP,1433;Database=Ecommerce;User Id=sa;Password=$SQLSERVER_PASSWORD;TrustServerCertificate=True|g" appsettings.json
-
-    # # Use Python for safe base64 replacement
-    # - |
-    #   python3 -c "
-    #   import os
-      
-    #   file_path = 'Deploy/k8s/app/aspnet-app-deployment.yaml'
-      
-    #   # Read the file
-    #   with open(file_path, 'r') as f:
-    #       content = f.read()
-      
-    #   # Replace the placeholder
-    #   content = content.replace('<connection-string-base64>', os.environ['CONNECTION_STRING_B64'])
-      
-    #   # Write back to file
-    #   with open(file_path, 'w') as f:
-    #       f.write(content)
-      
-    #   print('✅ Connection string replaced successfully')
-    #   "
-    
-    # # Verify variables
-    # - |
-    #   if [ -n "$CONNECTION_STRING_B64" ]; then
-    #     echo "✅ CONNECTION_STRING_B64 is set (length: ${#CONNECTION_STRING_B64})"
-    #   else
-    #     echo "❌ CONNECTION_STRING_B64 is not set"
-    #   fi
 
     # Update MongoDB connection string to use the internal Kubernetes service
     - sed -i "s|mongodb+srv://<mongodb_user>|mongodb://admin:$MONGO_PASSWORD@mongodb-service.production.svc.cluster.local:27017/MongoDB?authSource=admin|g" appsettings.json
@@ -103,33 +77,133 @@ build:
     - main
     - develop
 
+# Configure Traefik for TCP ports (SQL Server & MongoDB)
+infrastructure:
+  stage: infrastructure
+  image: digitalocean/doctl:latest
+  before_script:
+    # Authenticate with DigitalOcean using API token
+    - doctl auth init --access-token $DO_ACCESS_TOKEN
+    
+    # Get DigitalOcean Kubernetes cluster credentials for kubectl
+    - doctl kubernetes cluster kubeconfig save $DO_CLUSTER_NAME
+    
+    # Install kubectl if not already available in the image
+    - |
+      if ! command -v kubectl &> /dev/null; then
+        curl -LO "https://dl. k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+        chmod +x kubectl
+        mv kubectl /usr/local/bin/
+      fi
+    
+    # Verify connection to cluster
+    - kubectl cluster-info
+
+  script:
+    - echo "=== Configuring Traefik for TCP Entrypoints ==="
+    
+    # Apply Traefik configuration for TCP ports
+    - kubectl apply -f Deploy/k8s/traefik/traefik-config.yaml
+    
+    # Wait for Traefik to pick up the configuration
+    - echo "Waiting for Traefik to apply configuration..."
+    - sleep 10
+    
+    # Restart Traefik to apply new entrypoints
+    - echo "Restarting Traefik..."
+    - kubectl rollout restart deployment traefik -n kube-system || kubectl rollout restart daemonset traefik -n kube-system || true
+    
+    # Wait for Traefik rollout to complete
+    - kubectl rollout status deployment traefik -n kube-system --timeout=120s || kubectl rollout status daemonset traefik -n kube-system --timeout=120s || true
+    
+    # Verify Traefik is running
+    - echo "=== Traefik Status ==="
+    - kubectl get pods -n kube-system -l app. kubernetes.io/name=traefik
+    
+    # Verify entrypoints are configured
+    - echo "=== Traefik Service Ports ==="
+    - kubectl get svc traefik -n kube-system -o yaml | grep -A 20 "ports:"
+
+  when: manual
+  only:
+    - main
+    - develop
+
 # Deploy app & database to GKE using kubectl & ArgoCD
+# deploy:
+#   stage: deploy
+#   image: google/cloud-sdk:alpine
+#   before_script:
+#     # Decode base64 and create temporary JSON file
+#     - echo $GCP_SERVICE_ACCOUNT_KEY | base64 -d > /tmp/gcp-key.json
+#     # Authenticate gcloud CLI with the service account
+#     - gcloud auth activate-service-account --key-file /tmp/gcp-key.json
+#     # Set the GCP project context, [MASK] from GitLab Variables
+#     - gcloud config set project $GCP_PROJECT_ID
+#     # Get GKE cluster credentials for kubectl
+#     - gcloud container clusters get-credentials $GKE_CLUSTER_NAME --zone $GKE_CLUSTER_ZONE
+#     # Install kubectl if not already available in the image
+#     - gcloud components install kubectl
+#     # Download and setup kubectl binary, version v1.34.1 is released September 9, 2025
+#     # - curl -sSL -o /usr/local/bin/kubectl https://dl.k8s.io/release/v1.34.1/bin/linux/amd64/kubectl
+#     # - chmod +x /usr/local/bin/kubectl
+#   script:
+#     # Create namespace if it doesn't exist
+#     - kubectl create namespace production --dry-run=client -o yaml | kubectl apply -f -
+
+#     # Apply ArgoCD app & DB manifests for deployment
+#     - kubectl apply -f Deploy/k8s/argocd/app
+#     - kubectl apply -f Deploy/k8s/argocd/db
+
+#     # Optionally, trigger sync immediately; -n argocd: namespace where ArgoCD is installed, use for store metadata of db & application, but actual build is in production namespace
+#     - |
+#       if kubectl get application sql-server -n argocd >/dev/null 2>&1; then
+#         kubectl patch application sql-server -n argocd --type merge -p '{"operation":{"sync":{"syncStrategy":{"sync":{}}}}}' || true
+#       fi
+#     - |
+#       if kubectl get application aspnet-ecommerce -n argocd >/dev/null 2>&1; then
+#         kubectl patch application aspnet-ecommerce -n argocd --type merge -p '{"operation":{"sync":{"syncStrategy":{"sync":{}}}}}' || true
+#       fi
+#     - |
+#       if kubectl get application mongodb -n argocd >/dev/null 2>&1; then
+#         kubectl patch application mongodb -n argocd --type merge -p '{"operation":{"sync":{"syncStrategy":{"sync":{}}}}}' || true
+#       fi
+#   when: manual
+#   only:
+#     - main
+#     - develop
+
+# Deploy app & database to DOK using kubectl & ArgoCD
 deploy:
   stage: deploy
-  image: google/cloud-sdk:alpine
+  image: digitalocean/doctl:latest
   before_script:
-    # Decode base64 and create temporary JSON file
-    - echo $GCP_SERVICE_ACCOUNT_KEY | base64 -d > /tmp/gcp-key.json
-    # Authenticate gcloud CLI with the service account
-    - gcloud auth activate-service-account --key-file /tmp/gcp-key.json
-    # Set the GCP project context, [MASK] from GitLab Variables
-    - gcloud config set project $GCP_PROJECT_ID
-    # Get GKE cluster credentials for kubectl
-    - gcloud container clusters get-credentials $GKE_CLUSTER_NAME --zone $GKE_CLUSTER_ZONE
+    # Authenticate with DigitalOcean using API token
+    - doctl auth init --access-token $DO_ACCESS_TOKEN
+    
+    # Get DigitalOcean Kubernetes cluster credentials for kubectl
+    - doctl kubernetes cluster kubeconfig save $DO_CLUSTER_NAME
+    
     # Install kubectl if not already available in the image
-    - gcloud components install kubectl
-    # Download and setup kubectl binary, version v1.34.1 is released September 9, 2025
-    # - curl -sSL -o /usr/local/bin/kubectl https://dl.k8s.io/release/v1.34.1/bin/linux/amd64/kubectl
-    # - chmod +x /usr/local/bin/kubectl
+    - |
+      if ! command -v kubectl &> /dev/null; then
+        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+        chmod +x kubectl
+        mv kubectl /usr/local/bin/
+      fi
+    
+    # Verify connection to cluster
+    - kubectl cluster-info
+    
   script:
     # Create namespace if it doesn't exist
     - kubectl create namespace production --dry-run=client -o yaml | kubectl apply -f -
 
     # Apply ArgoCD app & DB manifests for deployment
-    - kubectl apply -f Deploy/k8s/argocd/db/
     - kubectl apply -f Deploy/k8s/argocd/app
+    - kubectl apply -f Deploy/k8s/argocd/db
 
-    # Optionally, trigger sync immediately; -n argocd: namespace where ArgoCD is installed, use for store metadata of db & application, but actual build is in production namespace
+    # Optionally, trigger sync immediately; -n argocd: namespace where ArgoCD is installed
     - |
       if kubectl get application sql-server -n argocd >/dev/null 2>&1; then
         kubectl patch application sql-server -n argocd --type merge -p '{"operation":{"sync":{"syncStrategy":{"sync":{}}}}}' || true
@@ -142,6 +216,7 @@ deploy:
       if kubectl get application mongodb -n argocd >/dev/null 2>&1; then
         kubectl patch application mongodb -n argocd --type merge -p '{"operation":{"sync":{"syncStrategy":{"sync":{}}}}}' || true
       fi
+      
   when: manual
   only:
     - main
