--- a/Deploy/k8s/nosql/mongo-deployment.yaml
+++ b/Deploy/k8s/nosql/mongo-deployment.yaml
@@ -43,10 +43,10 @@ spec:
           subPath: mongodb.conf
         resources:
           requests:
-            memory: "512Mi"
-            cpu: "250m"
+            memory: "256Mi" # 1Gi, 512Mi, 256Mi
+            cpu: "100m" # 250m, 100m
           limits:
-            memory: "1Gi"
+            memory: "512Mi"
             cpu: "500m"
         livenessProbe:
           exec:
@@ -127,7 +127,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: standard-rwo
+  storageClassName: local-path  # do-block-storage on DigitalOcean - standard-rwo on GKE - local-path on k3s default storage
 
 ---
 # MongoDB Service
@@ -139,13 +139,13 @@ metadata:
   labels:
     app: mongodb
 spec:
-  type: LoadBalancer
+  type: ClusterIP # LoadBalancer - ClusterIP - NodePort
   selector:
     app: mongodb
   ports:
   - port: 27017
     targetPort: 27017
-    # nodePort: 30017 # For NodePort type only
+    # nodePort: 30017  # Access via <ip>:30017
     protocol: TCP
     name: mongodb
 
@@ -198,8 +198,8 @@ spec:
     ports:
     - protocol: UDP
       port: 53
-    # - protocol: TCP
-    #   port: 53
+    - protocol: TCP
+      port: 443
   # - to:
   #   # Allow monitoring system
   #   - podSelector:
@@ -208,3 +208,19 @@ spec:
   #   ports:
   #   - protocol: TCP
   #     port: 9090
+
+---
+# Traefik IngressRouteTCP for MongoDB external access
+apiVersion: traefik.io/v1alpha1
+kind: IngressRouteTCP
+metadata:
+  name: mongodb-tcp-ingress
+  namespace: production
+spec:
+  entryPoints:
+    - mongodb  # Need to configure this entrypoint in Traefik
+  routes:
+  - match: HostSNI(`*`)
+    services:
+    - name: mongodb-service
+      port: 27017
