--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,6 @@
 variables:
   DOCKER_DRIVER: overlay2
   DOCKER_TLS_CERTDIR: "/certs"
-  # KUBECONFIG: /tmp/kubeconfig
   KUBECONTEXT: "gke_theta-moment-469209-j0_asia-southeast1_autopilot-cluster-1"
   KUBE_NAMESPACE: "production"
   DOMAIN: "ecommerceapi.bunlong.site"
@@ -10,10 +9,18 @@ variables:
   GCP_PROJECT_ID: "theta-moment-469209-j0"
   GKE_CLUSTER_NAME: "autopilot-cluster-1"
   GKE_CLUSTER_ZONE: "asia-southeast1"
-  # DOK Configuration
-  DO_CLUSTER_NAME: "kube-node-1"
   # Email API Key
   EMAIL_FROMEMAIL: "sendgrid@bunlong.site"
+
+  # DigitalOcean Configuration
+  DROPLET_IP: "188.166.219.244"
+  SSH_USER: "root"
+  DO_CLUSTER_NAME: "kube-node-1"
+  # Kubernetes Configuration
+  KUBECONFIG: "/tmp/kubeconfig"
+  # Tool Versions
+  DOCTL_VERSION: "1.101.0"
+  KUBECTL_VERSION: "1.29.0"
 
 stages:
   - build
@@ -77,64 +84,6 @@ build:
     - main
     - develop
 
-# Configure Traefik for TCP ports (SQL Server & MongoDB)
-infrastructure:
-  stage: infrastructure
-  image: 
-    name: digitalocean/doctl:latest
-    entrypoint: [""]  # Override the entrypoint to allow shell commands
-  before_script:
-    # Authenticate with DigitalOcean using API token
-    - doctl auth init --access-token $DO_ACCESS_TOKEN
-    
-    # Get DigitalOcean Kubernetes cluster credentials for kubectl
-    - doctl kubernetes cluster kubeconfig save $DO_CLUSTER_NAME
-
-    # Verify doctl installation
-    - doctl kubernetes cluster list
-    - doctl account get
-    
-    # Install kubectl if not already available in the image
-    - |
-      if ! command -v kubectl &> /dev/null; then
-        curl -LO "https://dl. k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-        chmod +x kubectl
-        mv kubectl /usr/local/bin/
-      fi
-    
-    # Verify connection to cluster
-    - kubectl cluster-info
-
-  script:
-    - echo "=== Configuring Traefik for TCP Entrypoints ==="
-    
-    # Apply Traefik configuration for TCP ports
-    - kubectl apply -f Deploy/k8s/traefik/traefik-config.yaml
-    
-    # Wait for Traefik to pick up the configuration
-    - echo "Waiting for Traefik to apply configuration..."
-    - sleep 10
-    
-    # Restart Traefik to apply new entrypoints
-    - echo "Restarting Traefik..."
-    - kubectl rollout restart deployment traefik -n kube-system || kubectl rollout restart daemonset traefik -n kube-system || true
-    
-    # Wait for Traefik rollout to complete
-    - kubectl rollout status deployment traefik -n kube-system --timeout=120s || kubectl rollout status daemonset traefik -n kube-system --timeout=120s || true
-    
-    # Verify Traefik is running
-    - echo "=== Traefik Status ==="
-    - kubectl get pods -n kube-system -l app. kubernetes.io/name=traefik
-    
-    # Verify entrypoints are configured
-    - echo "=== Traefik Service Ports ==="
-    - kubectl get svc traefik -n kube-system -o yaml | grep -A 20 "ports:"
-
-  when: manual
-  only:
-    - main
-    - develop
-
 # Deploy app & database to GKE using kubectl & ArgoCD
 # deploy:
 #   stage: deploy
@@ -179,56 +128,176 @@ infrastructure:
 #     - main
 #     - develop
 
-# Deploy app & database to DOK using kubectl & ArgoCD
-deploy:
-  stage: deploy
-  image: 
-    name: digitalocean/doctl:latest
-    entrypoint: [""]  # Override the entrypoint to allow shell commands
-  before_script:
-    # Authenticate with DigitalOcean using API token
-    - doctl auth init --access-token $DO_ACCESS_TOKEN
-    
-    # Get DigitalOcean Kubernetes cluster credentials for kubectl
-    - doctl kubernetes cluster kubeconfig save $DO_CLUSTER_NAME
 
-    # Verify doctl installation
-    - doctl kubernetes cluster list
-    - doctl account get
+# Configure Traefik for TCP ports (SQL Server & MongoDB) - Using Alpine
+infrastructure:
+  stage: infrastructure
+  image: alpine:3.19
+  before_script:
+    # Install required packages
+    - apk add --no-cache curl tar openssh-client bash
+
+    # Install doctl
+    - echo "=== Installing doctl v${DOCTL_VERSION} ==="
+    - curl -sL https://github.com/digitalocean/doctl/releases/download/v${DOCTL_VERSION}/doctl-${DOCTL_VERSION}-linux-amd64.tar.gz | tar -xzv
+    - mv doctl /usr/local/bin/
+    - doctl version
+
+    # Install kubectl
+    - echo "=== Installing kubectl v${KUBECTL_VERSION} ==="
+    - curl -LO "https://dl.k8s.io/release/v${KUBECTL_VERSION}/bin/linux/amd64/kubectl"
+    - chmod +x kubectl
+    - mv kubectl /usr/local/bin/
+    - kubectl version --client
+
+    # Setup SSH for k3s access
+    - echo "=== Setting up SSH connection ==="
+    - mkdir -p ~/.ssh
+    - echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
+    - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts 2>/dev/null
+
+    # Get kubeconfig from k3s droplet
+    - echo "=== Fetching kubeconfig from k3s ==="
+    - ssh -o StrictHostKeyChecking=no $SSH_USER@$DROPLET_IP "cat /etc/rancher/k3s/k3s.yaml" | sed "s/127.0.0.1/$DROPLET_IP/g" > $KUBECONFIG
+    - chmod 600 $KUBECONFIG
+    - export KUBECONFIG=$KUBECONFIG
+
+    # Verify connection to k3s cluster
+    - echo "=== Verifying k3s cluster connection ==="
+    - kubectl cluster-info
+    - kubectl get nodes
+
+  script:
+    - echo "=== Configuring Traefik for TCP Entrypoints ==="
     
-    # Install kubectl if not already available in the image
+    # Apply Traefik configuration for TCP ports
+    - kubectl apply -f Deploy/k8s/traefik/traefik-config.yaml
+    
+    # Wait for Traefik to pick up the configuration
+    - echo "Waiting for Traefik to apply configuration..."
+    - sleep 10
+    
+    # Restart Traefik to apply new entrypoints
+    - echo "=== Restarting Traefik ==="
     - |
-      if ! command -v kubectl &> /dev/null; then
-        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-        chmod +x kubectl
-        mv kubectl /usr/local/bin/
+      if kubectl get deployment traefik -n kube-system >/dev/null 2>&1; then
+        kubectl rollout restart deployment traefik -n kube-system
+        kubectl rollout status deployment traefik -n kube-system --timeout=120s
+      elif kubectl get daemonset traefik -n kube-system >/dev/null 2>&1; then
+        kubectl rollout restart daemonset traefik -n kube-system
+        kubectl rollout status daemonset traefik -n kube-system --timeout=120s
+      else
+        echo "Traefik not found as deployment or daemonset, checking pods..."
+        kubectl get pods -n kube-system -l app. kubernetes.io/name=traefik
       fi
     
-    # Verify connection to cluster
-    - kubectl cluster-info
+    # Verify Traefik is running
+    - echo "=== Traefik Status ==="
+    - kubectl get pods -n kube-system -l app. kubernetes.io/name=traefik
     
+    # Verify entrypoints are configured
+    - echo "=== Traefik Service Ports ==="
+    - kubectl get svc traefik -n kube-system -o yaml | grep -A 30 "ports:" || kubectl get svc -n kube-system | grep traefik
+
+  when: manual
+  only:
+    - main
+    - develop
+
+# Deploy app & database to k3s using kubectl & ArgoCD - Using Alpine
+deploy:
+  stage: deploy
+  image: alpine:3.19
+  variables:
+    KUBECONFIG: "/tmp/kubeconfig"
+  before_script:
+    # Install required packages
+    - apk add --no-cache curl tar openssh-client bash
+
+    # Install doctl (optional, for DigitalOcean API access)
+    - echo "=== Installing doctl v${DOCTL_VERSION} ==="
+    - curl -sL https://github.com/digitalocean/doctl/releases/download/v${DOCTL_VERSION}/doctl-${DOCTL_VERSION}-linux-amd64.tar.gz | tar -xzv
+    - mv doctl /usr/local/bin/
+    - doctl version
+
+    # Install kubectl
+    - echo "=== Installing kubectl v${KUBECTL_VERSION} ==="
+    - curl -LO "https://dl.k8s.io/release/v${KUBECTL_VERSION}/bin/linux/amd64/kubectl"
+    - chmod +x kubectl
+    - mv kubectl /usr/local/bin/
+    - kubectl version --client
+
+    # Setup SSH for k3s access
+    - echo "=== Setting up SSH connection ==="
+    - mkdir -p ~/.ssh
+    - echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
+    - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts 2>/dev/null
+
+    # Get kubeconfig from k3s droplet
+    - echo "=== Fetching kubeconfig from k3s ==="
+    - ssh -o StrictHostKeyChecking=no $SSH_USER@$DROPLET_IP "cat /etc/rancher/k3s/k3s.yaml" | sed "s/127.0.0.1/$DROPLET_IP/g" > $KUBECONFIG
+    - chmod 600 $KUBECONFIG
+    - export KUBECONFIG=$KUBECONFIG
+
+    # Verify connection to k3s cluster
+    - echo "=== Verifying k3s cluster connection ==="
+    - kubectl cluster-info
+    - kubectl get nodes
+
   script:
+    - echo "=== Starting Deployment to k3s ==="
+
     # Create namespace if it doesn't exist
     - kubectl create namespace production --dry-run=client -o yaml | kubectl apply -f -
+    
+    # Create namespace for argocd if it doesn't exist
+    - kubectl create namespace argocd --dry-run=client -o yaml | kubectl apply -f -
 
     # Apply ArgoCD app & DB manifests for deployment
+    - echo "=== Applying ArgoCD Application Manifests ==="
     - kubectl apply -f Deploy/k8s/argocd/app
     - kubectl apply -f Deploy/k8s/argocd/db
 
-    # Optionally, trigger sync immediately; -n argocd: namespace where ArgoCD is installed
+    # Wait for applications to be created
+    - sleep 5
+
+    # Trigger ArgoCD sync for SQL Server
+    - echo "=== Syncing ArgoCD Applications ==="
     - |
       if kubectl get application sql-server -n argocd >/dev/null 2>&1; then
-        kubectl patch application sql-server -n argocd --type merge -p '{"operation":{"sync":{"syncStrategy":{"sync":{}}}}}' || true
+        echo "Syncing sql-server application..."
+        kubectl patch application sql-server -n argocd --type merge -p '{"operation":{"sync":{"syncStrategy":{"apply":{"force":true}}}}}' || true
+      else
+        echo "sql-server application not found, skipping sync"
       fi
+
+    # Trigger ArgoCD sync for ASP.NET app
     - |
       if kubectl get application aspnet-ecommerce -n argocd >/dev/null 2>&1; then
-        kubectl patch application aspnet-ecommerce -n argocd --type merge -p '{"operation":{"sync":{"syncStrategy":{"sync":{}}}}}' || true
+        echo "Syncing aspnet-ecommerce application..."
+        kubectl patch application aspnet-ecommerce -n argocd --type merge -p '{"operation":{"sync":{"syncStrategy":{"apply":{"force":true}}}}}' || true
+      else
+        echo "aspnet-ecommerce application not found, skipping sync"
       fi
+
+    # Trigger ArgoCD sync for MongoDB
     - |
       if kubectl get application mongodb -n argocd >/dev/null 2>&1; then
-        kubectl patch application mongodb -n argocd --type merge -p '{"operation":{"sync":{"syncStrategy":{"sync":{}}}}}' || true
+        echo "Syncing mongodb application..."
+        kubectl patch application mongodb -n argocd --type merge -p '{"operation":{"sync":{"syncStrategy":{"apply":{"force":true}}}}}' || true
+      else
+        echo "mongodb application not found, skipping sync"
       fi
-      
+
+    # Display deployment status
+    - echo "=== Deployment Status ==="
+    - kubectl get applications -n argocd || true
+    - kubectl get pods -n production
+    - kubectl get svc -n production
+    - kubectl get ingress -n production || true
+
   when: manual
   only:
     - main
