Add k3s - traefik configuration for deployment v5

--- a/Deploy/k8s/app/aspnet-app-deployment.yaml
+++ b/Deploy/k8s/app/aspnet-app-deployment.yaml
@@ -267,7 +267,7 @@ spec:
   tls:
   - hosts:
     - ecommerceapi.bunlong.site
-    - www.ecommerceapi.bunlong.site
+    # - www.ecommerceapi.bunlong.site
     secretName: aspnet-tls-secret # cert-manager will create this secret
   rules:
   - host: ecommerceapi.bunlong.site
