--- a/Deploy/k8s/db/sql-server-deployment.yaml
+++ b/Deploy/k8s/db/sql-server-deployment.yaml
@@ -84,31 +84,31 @@ metadata:
   labels:
     app: mssql
 spec:
-  type: ClusterIP # LoadBalancer - ClusterIP - NodePort
+  type: NodePort # LoadBalancer - ClusterIP - NodePort
   selector:
     app: mssql
   ports:
   - port: 1433
     targetPort: 1433
-    # nodePort: 31433 # Access via <ip>:31433
+    nodePort: 31433 # Access via <External-IP>:31433
     protocol: TCP
     name: mssql
 
----
-# Traefik IngressRouteTCP for SQL Server external access
-apiVersion: traefik.io/v1alpha1
-kind: IngressRouteTCP
-metadata:
-  name: mssql-tcp-ingress
-  namespace: production
-spec:
-  entryPoints:
-    - mssql  # Need to configure this entrypoint in Traefik
-  routes:
-  - match: HostSNI(`*`)
-    services:
-    - name: mssql-service
-      port: 1433
+# ---
+# # Traefik IngressRouteTCP for SQL Server external access
+# apiVersion: traefik.io/v1alpha1
+# kind: IngressRouteTCP
+# metadata:
+#   name: mssql-tcp-ingress
+#   namespace: production
+# spec:
+#   entryPoints:
+#     - mssql  # Need to configure this entrypoint in Traefik
+#   routes:
+#   - match: HostSNI(`*`)
+#     services:
+#     - name: mssql-service
+#       port: 1433
 
 ---
 # SQL Server Persistent Volume Claim
