--- a/Deploy/k8s/nosql/mongo-deployment.yaml
+++ b/Deploy/k8s/nosql/mongo-deployment.yaml
@@ -139,13 +139,13 @@ metadata:
   labels:
     app: mongodb
 spec:
-  type: ClusterIP # LoadBalancer - ClusterIP - NodePort
+  type: NodePort # LoadBalancer - ClusterIP - NodePort
   selector:
     app: mongodb
   ports:
   - port: 27017
     targetPort: 27017
-    # nodePort: 30017  # Access via <ip>:30017
+    nodePort: 30017  # Access via <External-IP>:30017
     protocol: TCP
     name: mongodb
 
@@ -209,18 +209,18 @@ spec:
   #   - protocol: TCP
   #     port: 9090
 
----
-# Traefik IngressRouteTCP for MongoDB external access
-apiVersion: traefik.io/v1alpha1
-kind: IngressRouteTCP
-metadata:
-  name: mongodb-tcp-ingress
-  namespace: production
-spec:
-  entryPoints:
-    - mongodb  # Need to configure this entrypoint in Traefik
-  routes:
-  - match: HostSNI(`*`)
-    services:
-    - name: mongodb-service
-      port: 27017
+# ---
+# # Traefik IngressRouteTCP for MongoDB external access
+# apiVersion: traefik.io/v1alpha1
+# kind: IngressRouteTCP
+# metadata:
+#   name: mongodb-tcp-ingress
+#   namespace: production
+# spec:
+#   entryPoints:
+#     - mongodb  # Need to configure this entrypoint in Traefik
+#   routes:
+#   - match: HostSNI(`*`)
+#     services:
+#     - name: mongodb-service
+#       port: 27017
