--- a/Deploy/k8s/db/sql-server-deployment.yaml
+++ b/Deploy/k8s/db/sql-server-deployment.yaml
@@ -25,26 +25,9 @@ spec:
         command: ['sh', '-c']
         args:
           - |
-            echo "=== Setting up SQL Server data directory ==="
-            # Create required directories
-            mkdir -p /var/opt/mssql/data
-            mkdir -p /var/opt/mssql/log
-            mkdir -p /var/opt/mssql/secrets
-            
-            # Check if data directory has corrupted files
-            if [ -f /var/opt/mssql/data/master.mdf ]; then
-              echo "Existing data files found"
-              ls -la /var/opt/mssql/data/
-            else
-              echo "No existing data files, fresh installation"
-            fi
-            
-            # Fix ownership - SQL Server runs as mssql user (UID 10001)
             chown -R 10001:0 /var/opt/mssql
             chmod -R 755 /var/opt/mssql
-            
-            echo "=== Directory structure ==="
-            ls -la /var/opt/mssql/
+            ls -la /var/opt/mssql
         securityContext:
           runAsUser: 0  # Run as root to change permissions
         volumeMounts:
@@ -91,11 +74,6 @@ spec:
             port: 1433
           initialDelaySeconds: 60
           periodSeconds: 30
-        # Security context for SQL Server
-        securityContext:
-          runAsUser: 10001
-          runAsGroup: 0
-          allowPrivilegeEscalation: false
       volumes:
       - name: mssql-persistent-storage
         persistentVolumeClaim:
@@ -152,7 +130,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: local-path  # do-block-storage on DigitalOcean - standard-rwo on GKE - local-path on k3s default storage
+  storageClassName: do-block-storage  # do-block-storage on DigitalOcean - standard-rwo on GKE - local-path on k3s default storage
 
 ---
 # SQL Server Secrets
