--- a/Deploy/k8s/db/sql-server-deployment.yaml
+++ b/Deploy/k8s/db/sql-server-deployment.yaml
@@ -130,7 +130,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: do-block-storage-xfs  # do-block-storage on DigitalOcean - standard-rwo on GKE - local-path on k3s default storage
+  storageClassName: do-block-storage  # do-block-storage on DigitalOcean - standard-rwo on GKE - local-path on k3s default storage
 
 ---
 # SQL Server Secrets
