config database expose and storage v4

--- a/Deploy/k8s/nosql/mongo-deployment.yaml
+++ b/Deploy/k8s/nosql/mongo-deployment.yaml
@@ -127,7 +127,7 @@ spec:
   resources:
     requests:
       storage: 10Gi
-  storageClassName: do-block-storage  # do-block-storage on DigitalOcean - standard-rwo on GKE - local-path on k3s default storage
+  storageClassName: local-path  # do-block-storage on DigitalOcean - standard-rwo on GKE - local-path on k3s default storage
 
 ---
 # MongoDB Service
